# red-corner-lounge

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: triangle.frag  triangle.vert
src/: app.cpp  app.h  config.cpp  config.h  error.h  glm.h  json.h  log.cpp  log.h  main.cpp  utility.cpp  utility.h  vulkan_interface.h
src/vki/: camera.cpp  camera.h  vertex.cpp  vertex.h  vulkan.cpp  vulkan.h  vulkan_assist.cpp  vulkan_assist.h  vulkan_debug.cpp  vulkan_debug.h  vulkan_device.cpp  vulkan_device.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_interface.cpp  vulkan_interface.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_swapchain.cpp  vulkan_swapchain.h
